# Swisslife_test

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/models/: classification_models.py  form_models.py
app/routes/: classification.py  form.py
app/services/: classification_service.py  form_service.py
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: classification.baml  clients.baml  form_completion.baml
